--- a/app/views/post/edit.html.erb
+++ b/app/views/post/edit.html.erb
@@ -1,4 +1,4 @@
-<form action="/post/<%= @post.id %>" method="patch">
+<form action="/post/<%= @post.id %>" method="post">
   <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
   <label for="input_text">Title</label>
   <input name="input_title" id="input_text" type="text" value="<%= @post.title %>">
